Traducción hasta la mitad del Capítulo 3

--- a/book/book.tex
+++ b/book/book.tex
@@ -399,7 +399,7 @@ y una mejora de estilo en el Capítulo 1, e inició la discusión
 sobre los aspectos técnicos de los intérpretes.
 
 \item Beno\^{i}t Girard envió una
-corrección a un error humorístico en la Sección 5.6.
+corrección a un error chistoso en la Sección 5.6.
 
 \item Courtney Gleason y Katherine Smith escribieron {\tt horsebet.py}, que
 fue usado como un estudio de caso en una versión anterior del libro.  Su
@@ -446,8 +446,8 @@ to improve the distribution of the book.
 \item David Pool sent in a typo in the glossary of Chapter 1, as well
 as kind words of encouragement.
 
-\item Michael Schmitt sent in a correction to the chapter on files
-and exceptions.
+\item Michael Schmitt envió una corrección al capítulo de archivos
+y excepciones.
 
 \item Robin Shaw pointed out an error in Section 13.1, where the
 printTime function was used in an example without being defined.
@@ -458,11 +458,11 @@ Perl script that generates HTML from LaTeX.
 \item Craig T. Snydal is testing the text in a course at Drew
 University.  He has contributed several valuable suggestions and corrections.
 
-\item Ian Thomas and his students are using the text in a programming
-course.  They are the first ones to test the chapters in the latter half
-of the book, and they have made numerous corrections and suggestions.
+\item Ian Thomas y sus alumnos están usando el texto en un curso de
+programación.  Ellos son los primeros en probar los capítulos de la segunda mitad
+del libro, y han hecho numerosas correcciones y sugerencicas.
 
-\item Keith Verheyden sent in a correction in Chapter 3.
+\item Keith Verheyden envió una correción en en Capítulo 3.
 
 \item Peter Winstanley let us know about a longstanding error in
 our Latin in Chapter 3.
@@ -515,24 +515,24 @@ and he caught a couple of bad errors in Chapter 5.
 \item Florin Oprina sent in an improvement in {\tt makeTime},
 a correction in {\tt printTime}, and a nice typo.
 
-\item D.~J.~Webre suggested a clarification in Chapter 3.
+\item D.~J.~Webre sugirió una aclaración en el Capítulo 3.
 
-\item Ken found a fistful of errors in Chapters 8, 9 and 11.
+\item Ken encontró un puñado de errores en los Capítulos 8, 9 y 11.
 
 \item Ivo Wever caught a typo in Chapter 5 and suggested a clarification
 in Chapter 3.
 
-\item Curtis Yanko suggested a clarification in Chapter 2.
+\item Curtis Yanko sugirió una aclaración en el Capítulo 2.
 
-\item Ben Logan sent in a number of typos and problems with translating
-the book into HTML.
+\item Ben Logan envió una serie de errores tipográficos y problemas con la traducción
+del libro a HTML.
 
-\item Jason Armstrong saw the missing word in Chapter 2.
+\item Jason Armstrong vió la palabra perdida en el Capítulo 2.
 
 \item Louis Cordier noticed a spot in Chapter 16 where the code
 didn't match the text.
 
-\item Brian Cain suggested several clarifications in Chapters 2 and 3.
+\item Brian Cain sugirió varias aclaraciones en los Capítulos 2 y 3.
 
 \item Rob Black sent in a passel of corrections, including some
 changes for Python 2.2.
@@ -541,15 +541,15 @@ changes for Python 2.2.
 Paris sent a number of patches, including some updates for Python 2.2
 and other thoughtful improvements.
 
-\item Jason Mader at George Washington University made a number
-of useful suggestions and corrections.
+\item Jason Mader en la George Washington University hizo una serie 
+de sugerencias y correcciones útiles.
 
 \item Jan Gundtofte-Bruun reminded us that ``a error'' is an error.
 
-\item Abel David and Alexis Dinno reminded us that the plural of
-``matrix'' is ``matrices'', not ``matrixes''.  This error was in the
-book for years, but two readers with the same initials reported it on
-the same day.  Weird.
+\item Abel David y Alexis Dinno nos recordaron que el plural de
+``matrix'' es ``matrices'', no ``matrixes''.  Este error estuvo en el
+libro por años, pero dos lectores con las mismas iniciales lo informaron en
+el mismo día. Extraño.
 
 \item Charles Thayer encouraged us to get rid of the semi-colons
 we had put at the ends of some statements and to clean up our
@@ -564,7 +564,7 @@ use of ``argument'' and ``parameter''.
 \item C. Corey Capel spotted the missing word in the Third Theorem
 of Debugging and a typo in Chapter 4.
 
-\item Alessandra helped clear up some Turtle confusion.
+\item Alessandra ayudó a aclarar alguna confusión con Turtle.
 
 \item Wim Champagne found a brain-o in a dictionary example.
 
@@ -573,9 +573,9 @@ of Debugging and a typo in Chapter 4.
 
 \item Jared Spindor found some jetsam at the end of a sentence.
 
-\item Lin Peiheng sent a number of very helpful suggestions.
+\item Lin Peiheng envió una serie de sugerencias muy útiles.
 
-\item Ray Hagtvedt sent in two errors and a not-quite-error.
+\item Ray Hagtvedt envió dos errores y un no tan error.
 
 \item Torsten H\"{u}bsch pointed out an inconsistency in Swampy.
 
@@ -588,8 +588,8 @@ of Debugging and a typo in Chapter 4.
 \item Scott Tyler filled in a that was missing.  And then sent in
 a heap of corrections.
 
-\item Gordon Shephard sent in several corrections, all in separate
-emails.
+\item Gordon Shephard envió varias correcciones, todas en correos
+seoarados.
 
 \item Andrew Turner {\tt spot}ted an error in Chapter 8.
 
@@ -608,24 +608,24 @@ a bunch of typos and a ``use before def''.
 
 \item Joe Funke spotted a typo.
 
-\item Chao-chao Chen found an inconsistency in the Fibonacci example.
+\item Chao-chao Chen encontró una inconsistencia en el ejemplo de Fibonacci.
 
-\item Jeff Paine knows the difference between space and spam.
+\item Jeff Paine sabe la diferencia entre space y spam.
 
 \item Lubos Pintes sent in a typo.
 
-\item Gregg Lind and Abigail Heithoff suggested Exercise~\ref{checksum}.
+\item Gregg Lind y Abigail Heithoff sugirieron el Ejercicio~\ref{checksum}.
 
 \item Max Hailperin has sent in a number of corrections and
   suggestions.  Max is one of the authors of the extraordinary {\em
     Concrete Abstractions}, which you might want to read when you are
   done with this book.
 
-\item Chotipat Pornavalai found an error in an error message.
+\item Chotipat Pornavalai encontró un error en un mensaje de error.
 
-\item Stanislaw Antol sent a list of very helpful suggestions.
+\item Stanislaw Antol envió una lista de sugerencias muy útiles.
 
-\item Eric Pashman sent a number of corrections for Chapters 4--11.
+\item Eric Pashman envió una serie de correcciones para los Capítulos 4--11.
 
 \item Miguel Azevedo found some typos.
 
@@ -633,7 +633,7 @@ a bunch of typos and a ``use before def''.
 
 \item Nick King found a missing word.
 
-\item Martin Zuther sent a long list of suggestions.
+\item Martin Zuther envió una larga lista de sugerencias.
 
 \item Adam Zimmerman found an inconsistency in my instance
 of an ``instance'' and several other errors.
@@ -641,26 +641,26 @@ of an ``instance'' and several other errors.
 \item Ratnakar Tiwari suggested a footnote explaining degenerate
 triangles.
 
-\item Anurag Goel suggested another solution for \verb"is_abecedarian"
-and sent some additional corrections.  And he knows how to
-spell Jane Austen.
+\item Anurag Goel sugirió otra solución para \verb"is_abecedarian"
+y envió algunas correcciones adicionales.  Y sabe cómo
+deletrear Jane Austen.
 
 \item Kelli Kratzer spotted one of the typos.
 
 \item Mark Griffiths pointed out a confusing example in Chapter 3.
 
-\item Roydan Ongie found an error in my Newton's method.
+\item Roydan Ongie encontró un error en mi método de Newton.
 
-\item Patryk Wolowiec helped me with a problem in the HTML version.
+\item Patryk Wolowiec me ayudó con un problema en la versión HTML.
 
 \item Mark Chonofsky told me about a new keyword in Python 3.
 
-\item Russell Coleman helped me with my geometry.
+\item Russell Coleman me ayudó con mi geometría.
 
 \item Nam Nguyen found a typo and pointed out that I used the Decorator
 pattern but didn't mention it by name.
 
-\item St\'{e}phane Morin sent in several corrections and suggestions.
+\item St\'{e}phane Morin envió varias correcciones y sugerencias.
 
 \item Paul Stoop corrected a typo in \verb+uses_only+.
 
@@ -719,7 +719,7 @@ edition.
 
 \item Per Starb{\"a}ck brought me up to date on universal newlines in Python 3.
 
-\item Laurent Rosenfeld and Mihaela Rotaru translated this book into French.  Along the way, they sent many corrections and suggestions.
+\item Laurent Rosenfeld y Mihaela Rotaru tradujeron este libro al francés.  En el camino, me enviaron muchas correcciones y sugerencias.
 
 % ENDCONTRIB
 
@@ -1012,13 +1012,14 @@ una categoría; un tipo es una categoría de valores.
 Evidentemente, los enteros pertenecen al tipo {\tt int},
 las cadenas pertenecen al tipo {\tt str} y los números de
 coma flotante pertenecen al tipo {\tt float}.
-\index{tipo}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\index{string type}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\index{type!str}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\index{int type}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\index{type!int}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\index{float type}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\index{type!float}%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\index{tipo}
+\index{tipo string}
+\index{tipo cadena}
+\index{str!tipo}
+\index{tipo int}
+\index{int!tipo}
+\index{tipo float}
+\index{float!tipo}
 
 ¿Qué pasa con los valores como \verb"'2'" y \verb"'42.0'"?
 Se ven como números, pero están en comillas como
@@ -1374,7 +1375,7 @@ Inicia el intérprete de Python y úsalo como una calculadora.
 \chapter{Variables, expresiones y sentencias}
 
 Una de las características más poderosas de un lenguaje de programaciónes la
-posibilidad de manipular {\bf variables}.  Una variable es un nombre que 
+posibilidad de manipular {\bf variables}.  Una variable es un nombre que
 hace referencia a un valor.
 \index{variable}
 
@@ -1576,48 +1577,48 @@ Ahora pon las mismas sentencias en un script y ejecútalo.  ¿Cuál
 es la salida?  Modifica el script transformando cada
 expresión en una sentencia print y luego ejecútalo de nuevo.
 
-\section{Order of operations}
-\index{order of operations}
+\section{Orden de operaciones}
+\index{orden de operaciones}
 \index{PEMDAS}
 
-When an expression contains more than one operator, the order of
-evaluation depends on the {\bf order of operations}.  For
-mathematical operators, Python follows mathematical convention.
-The acronym {\bf PEMDAS} is a useful way to
-remember the rules:
+Cuando una expresión contiene más de un operador, el orden de
+evaluación depende del {\bf orden de operaciones}.  Para
+operadores matemáticos, Python sigue la convención matemática.
+El acrónimo {\bf PEMDAS} es una manera útil de
+recordar las reglas:
 
 \begin{itemize}
 
-\item {\bf P}arentheses have the highest precedence and can be used
-to force an expression to evaluate in the order you want. Since
-expressions in parentheses are evaluated first, {\tt 2 * (3-1)} is 4,
-and {\tt (1+1)**(5-2)} is 8. You can also use parentheses to make an
-expression easier to read, as in {\tt (minute * 100) / 60}, even
-if it doesn't change the result.
+\item Los {\bf P}aréntesis tienen la mayor prioridad y se pueden usar 
+para forzar una expresión a evaluar en el orden que tú quieras. Ya que
+las expresiones en paréntesis se evalúan primero, {\tt 2 * (3-1)} es 4,
+y {\tt (1+1)**(5-2)} es 8. También puedes usar paréntesis para hacer una
+expresión más fácil de leer, como en {\tt (minute * 100) / 60}, incluso
+si no cambia el resultado.
 
-\item {\bf E}xponentiation has the next highest precedence, so
-{\tt 1 + 2**3} is 9, not 27, and {\tt 2 * 3**2} is 18, not 36.
+\item Los {\bf E}xponentes (potencias) tienen la siguiente proridad, así que
+{\tt 1 + 2**3} es 9, no 27, y {\tt 2 * 3**2} es 18, no 36.
 
-\item {\bf M}ultiplication and {\bf D}ivision have higher precedence
-  than {\bf A}ddition and {\bf S}ubtraction.  So {\tt 2*3-1} is 5, not
-  4, and {\tt 6+4/2} is 8, not 5.
+\item La {\bf M}ultiplicación y la {\bf D}ivisión tienen mayor prioridad
+	que la {\bf A}dición (suma) y la {\bf S}sustracción (resta).  Así que {\tt 2*3-1} es 5, no
+  4, y {\tt 6+4/2} es 8, no 5.
 
-\item Operators with the same precedence are evaluated from left to
-  right (except exponentiation).  So in the expression {\tt degrees /
-    2 * pi}, the division happens first and the result is multiplied
-  by {\tt pi}.  To divide by $2 \pi$, you can use parentheses or write
+\item Los operadores con la misma prioridad se evalúan de izquierda a
+  derecha (excepto la potenciación).  Así que en la expresión {\tt degrees /
+    2 * pi}, la división ocurre primero y el resultado se multiplica
+  por {\tt pi}.  Para dividir por $2 \pi$, puedes usar paréntesis o escribir
   {\tt degrees / 2 / pi}.
 
 \end{itemize}
 
-I don't work very hard to remember the precedence of
-operators.  If I can't tell by looking at the expression, I use
-parentheses to make it obvious.
+Yo no me esfuerzo mucho en recordar la prioridad de los
+operadores. Si no puedo saber mirando la expresión, uso
+paréntesis para hacerlo obvio.
 
 
 \section{Operaciones con cadenas}
-\index{string!operation}
-\index{operator!string}
+\index{operación con cadena}
+\index{cadena!operación con}
 
 En general, no puedes realizar operaciones matemáticas con cadenas, incluso
 si las cadenas parecen números, por lo que las siguientes son ilegales:
@@ -1755,74 +1756,74 @@ lo que hace.
 
 \begin{description}
 
-\item[variable:]  A name that refers to a value.
+\item[variable:]  Un nombre que hace referencia a un valor.
 \index{variable}
 
-\item[assignment:]  A statement that assigns a value to a variable.
-\index{assignment}
+\item[asignación:]  Una sentencia que asigna un valor a una variable.
+\index{asignación}
 
-\item[state diagram:]  A graphical representation of a set of variables and the
-values they refer to.
-\index{state diagram}
+\item[diagrama de estado:]  Una representación gráfica de un conjunto de variables y los
+valores a los cuales hacen referencia.
+\index{diagrama de estado}
 
-\item[keyword:]  A reserved word that is used to parse a
-program; you cannot use keywords like {\tt if}, {\tt  def}, and {\tt while} as
-variable names.
-\index{keyword}
+\item[palabra clave:]  Una palabra reservada que se usa como parte de la sintaxis
+de un programa; no puedes usar palabras claves tales como {\tt if}, {\tt  def} y {\tt while} como
+nombres de variables.
+\index{palabra clave}
 
-\item[operand:]  One of the values on which an operator operates.
-\index{operand}
+\item[operando:]  Uno de los valores en los cuales opera un operador.
+\index{operando}
 
-\item[expression:]  A combination of variables, operators, and values that
-represents a single result.
-\index{expression}
+\item[expresión:]  Una combinación de variables, operadores y valores que
+representa un resultado único.
+\index{expresión}
 
-\item[evaluate:]  To simplify an expression by performing the operations
-in order to yield a single value.
+\item[evaluar:]  Simplificar una expresión realizando las operaciones
+para obtener un valor único.
 
-\item[statement:]  A section of code that represents a command or action.  So
-far, the statements we have seen are assignments and print statements.
-\index{statement}
+\item[sentencia:]  Una sección de código que representa un comando o acción.  Hasta
+aquí, las sentencias que hemos visto son asignaciones y sentencias print.
+\index{sentencia}
 
-\item[execute:]  To run a statement and do what it says.
-\index{execute}
+\item[ejecutar:]  LLevar a efecto una sentencia y hacer lo que dice.
+\index{ejecutar}
 
-\item[interactive mode:] A way of using the Python interpreter by
-typing code at the prompt.
-\index{interactive mode}
+\item[modo interactivo:] Una manera de usar el intérprete de Python
+escribiendo código en el prompt.
+\index{modo interactivo}
 
-\item[script mode:] A way of using the Python interpreter to read
-code from a script and run it.
-\index{script mode}
+\item[modo script:] Una manera de usar el intérprete de Python para leer
+código de un script y ejecutarlo.
+\index{modo script}
 
-\item[script:] A program stored in a file.
+\item[script:] Un programa almacenado en un archivo.
 \index{script}
 
-\item[order of operations:]  Rules governing the order in which
-expressions involving multiple operators and operands are evaluated.
+\item[orden de operaciones:]  Reglas que gobiernan el orden en el cual
+se evalúan las expresiones que involucran múltiples operadores y operandos.
 \index{order of operations}
 
-\item[concatenate:]  To join two operands end-to-end.
-\index{concatenation}
+\item[concatenar:]  Unir dos operandos de extremo a extremo.
+\index{concatenación}
 
-\item[comment:]  Information in a program that is meant for other
-programmers (or anyone reading the source code) and has no effect on the
-execution of the program.
-\index{comment}
+\item[comentario:]  Información en un programa que está destinada a otros
+programadores (o cualquiera que lea el código fuente) y no tiene efecto en la
+ejecución del programa.
+\index{comentario}
 
-\item[syntax error:]  An error in a program that makes it impossible
-to parse (and therefore impossible to interpret).
-\index{syntax error}
+\item[error de sintaxis:]  Un error en un programa que hace imposible reconocer
+la estructura sintáctica (y por lo tanto imposible de interpretar).
+\index{error de sintaxis}
 
-\item[exception:]  An error that is detected while the program is running.
-\index{exception}
+\item[excepción:]  Un error que es detectado mientras el programa se ejecuta.
+\index{excepción}
 
-\item[semantics:]  The meaning of a program.
-\index{semantics}
+\item[semántica:]  El significado de un programa.
+\index{semántica}
 
-\item[semantic error:]   An error in a program that makes it do something
-other than what the programmer intended.
-\index{semantic error}
+\item[error semántico:]   Un error en un programa que supone hacer algo
+distinto a lo que el programador pretendía.
+\index{error semántico}
 
 \end{description}
 
@@ -1831,23 +1832,23 @@ other than what the programmer intended.
 
 \begin{exercise}
 
-Repeating my advice from the previous chapter, whenever you learn
-a new feature, you should try it out in interactive mode and make
-errors on purpose to see what goes wrong.
+Repitiendo mi consejo del capítulo anterior, cuando aprendas
+una nueva característica, deberías intentar probarla en modo interactivo y cometer
+errores a propósito para ver qué sale mal.
 
 \begin{itemize}
 
-\item We've seen that {\tt n = 42} is legal.  What about {\tt 42 = n}?
+\item Hemos visto que {\tt n = 42} es legal.  ¿Qué hay de {\tt 42 = n}?
 
-\item How about {\tt x = y = 1}?
+\item ¿Qué ocurre con {\tt x = y = 1}?
 
-\item In some languages every statement ends with a semi-colon, {\tt ;}.
-What happens if you put a semi-colon at the end of a Python statement?
+\item En algunos lenguajes cada sentencia termina con un punto y coma, {\tt ;}.
+¿Qué ocurre si pones un punto y coma al final de una sentencia de Python?
 
-\item What if you put a period at the end of a statement?
+\item ¿Qué ocurre si pones un punto al final de una sentencia?
 
-\item In math notation you can multiply $x$ and $y$ like this: $x y$.
-What happens if you try that in Python?
+\item En notación matemática puedes multiplicar $x$ e $y$ así: $x y$.
+¿Qué ocurre si intentas eso en Python?
 
 \end{itemize}
 
@@ -1856,23 +1857,23 @@ What happens if you try that in Python?
 
 \begin{exercise}
 
-Practice using the Python interpreter as a calculator:
-\index{calculator}
+Practica usando el intérprete de Python como una calculadora:
+\index{calculadora}
 
 \begin{enumerate}
 
-\item The volume of a sphere with radius $r$ is $\frac{4}{3} \pi r^3$.
-  What is the volume of a sphere with radius 5?
+\item El volumen de una esfera con radio $r$ es $\frac{4}{3} \pi r^3$.
+  ¿Cuál es el volumen de una esfera con radio 5?
 
-\item Suppose the cover price of a book is \$24.95, but bookstores get a
-  40\% discount.  Shipping costs \$3 for the first copy and 75 cents
-  for each additional copy.  What is the total wholesale cost for
-  60 copies?
+\item Supongamos que el precio original de un libro es \$24.95, pero las librerías obtienen
+  un 40\% de descuento.  El envío cuesta \$3 para la primera copia y 75 centavos
+  por cada copia adicional.  ¿Cuál es el costo al por mayor para
+  60 copias?
 
-\item If I leave my house at 6:52 am and run 1 mile at an easy pace
-  (8:15 per mile), then 3 miles at tempo (7:12 per mile) and 1 mile at
-  easy pace again, what time do I get home for breakfast?
-\index{running pace}
+\item Si dejo mi casa a las 6:52 am y corro 1 milla a un ritmo fácil
+  (8:15 por milla), luego 3 millas un poco más fuerte (7:12 por milla) y 1 milla
+  a ritmo fácil de nuevo, ¿a qué hora llego a casa para el desayuno?
+\index{ritmo de carrera}
 
 \end{enumerate}
 \end{exercise}
@@ -1881,40 +1882,40 @@ Practice using the Python interpreter as a calculator:
 \chapter{Functions}
 \label{funcchap}
 
-In the context of programming, a {\bf function} is a named sequence of
-statements that performs a computation.  When you define a function,
-you specify the name and the sequence of statements.  Later, you can
-``call'' the function by name.
-\index{function}
+En el contexto de la programación, una {\bf función} es una secuencia de sentencias
+que realiza una computación y posee un nombre.  Cuando defines una función,
+especificas el nombre y la secuencia de sentencias.  Después, puedes
+``llamar'' a la función por su nombre.
+\index{función}
 
-\section{Function calls}
+\section{LLamadas a funciones}
 \label{functionchap}
-\index{function call}
+\index{llamada a función}
 
-We have already seen one example of a {\bf function call}:
+Ya hemos visto un ejemplo de una {\bf llamada a función}:
 
 \begin{verbatim}
 >>> type(42)
 <class 'int'>
 \end{verbatim}
 %
-The name of the function is {\tt type}.  The expression in parentheses
-is called the {\bf argument} of the function.  The result, for this
-function, is the type of the argument.
-\index{parentheses!argument in}
+El nombre de la función es {\tt type}.  La expresión en paréntesis
+se llama el {\bf argumento} de la función.  El resultado, para esta
+función, es el tipo del argumento.
+\index{paréntesis!argumento en}
 
-It is common to say that a function ``takes'' an argument and ``returns''
-a result.  The result is also called the {\bf return value}.
-\index{argument}
-\index{return value}
+Es común decir que una función ``toma'' un argumento y ``devuelve''
+un resultado.  El resultado también se llama el {\bf valor de retorno} (en inglés, {\em return value}).
+\index{argumento}
+\index{valor de retorno}\index{return value}
 
-Python provides functions that convert values
-from one type to another.  The {\tt int} function takes any value and
-converts it to an integer, if it can, or complains otherwise:
-\index{conversion!type}
-\index{type conversion}
-\index{int function}
-\index{function!int}
+Python proporciona funciones que convierten valores
+de un tipo a otro.  La función {\tt int} toma cualquier valor y
+lo convierte en un entero, si puede, o de lo contrario reclama:
+\index{tipo!conversión de}
+\index{conversión de tipo}
+\index{función int}
+\index{int!función}
 
 \begin{verbatim}
 >>> int('32')
@@ -1923,8 +1924,8 @@ converts it to an integer, if it can, or complains otherwise:
 ValueError: invalid literal for int(): Hello
 \end{verbatim}
 %
-{\tt int} can convert floating-point values to integers, but it
-doesn't round off; it chops off the fraction part:
+{\tt int} puede convertir valores de coma flotante en enteros, pero
+no redondea; corta la parte de fracción:
 
 \begin{verbatim}
 >>> int(3.99999)
@@ -1933,10 +1934,10 @@ doesn't round off; it chops off the fraction part:
 -2
 \end{verbatim}
 %
-{\tt float} converts integers and strings to floating-point
-numbers:
-\index{float function}
-\index{function!float}
+{\tt float} convierte enteros y cadenas en números coma
+flotante:
+\index{función float}
+\index{float!función}
 
 \begin{verbatim}
 >>> float(32)
@@ -1945,9 +1946,9 @@ numbers:
 3.14159
 \end{verbatim}
 %
-Finally, {\tt str} converts its argument to a string:
-\index{str function}
-\index{function!str}
+Por último, {\tt str} convierte su argumento en una cadena:
+\index{str!function}
+\index{función str}
 
 \begin{verbatim}
 >>> str(32)
@@ -1957,36 +1958,36 @@ Finally, {\tt str} converts its argument to a string:
 \end{verbatim}
 %
 
-\section{Math functions}
-\index{math function}
-\index{function, math}
+\section{Funciones matemáticas}
+\index{función matemática}
+\index{matemática!función}
 
-Python has a math module that provides most of the familiar
-mathematical functions.  A {\bf module} is a file that contains a
-collection of related functions.
+Python tiene un módulo math que proporciona la mayor parte de las
+funciones matemáticas familiares.  Un {\bf módulo} es un archivo que contiene una
+colección de funciones relacionadas entre sí.
 \index{module}
 \index{module object}
 
-Before we can use the functions in a module, we have to import it with
-an {\bf import statement}:
+Antes de que podamos usar las funciones de un módulo, tenemos que importarlo con
+una {\bf sentencia import}:
 
 \begin{verbatim}
 >>> import math
 \end{verbatim}
 %
-This statement creates a {\bf module object} named math.  If
-you display the module object, you get some information about it:
+Esta sentencia crea un {\bf objeto de módulo} llamado math.  Si
+muestras el objeto de módulo en pantalla, obtienes información sobre éste:
 
 \begin{verbatim}
 >>> math
 <module 'math' (built-in)>
 \end{verbatim}
 %
-The module object contains the functions and variables defined in the
-module.  To access one of the functions, you have to specify the name
-of the module and the name of the function, separated by a dot (also
-known as a period).  This format is called {\bf dot notation}.
-\index{dot notation}
+El objeto de módulo contiene las funciones y variables definidas en el
+módulo. Para tener acceso a una de las funciones, tienes que especificar el nombre
+del módulo y el nombre de la función, separado por un punto.
+Este formato se llama {\bf notación punto}.
+\index{notación punto}
 
 \begin{verbatim}
 >>> ratio = signal_power / noise_power
@@ -1996,20 +1997,20 @@ known as a period).  This format is called {\bf dot notation}.
 >>> height = math.sin(radians)
 \end{verbatim}
 %
-The first example uses \verb"math.log10" to compute
-a signal-to-noise ratio in decibels (assuming that \verb"signal_power" and
-\verb"noise_power" are defined).  The math module also provides {\tt log},
-which computes logarithms base {\tt e}.
-\index{log function}
-\index{function!log}
-\index{sine function}
-\index{radian}
-\index{trigonometric function}
-\index{function, trigonometric}
+El primer ejemplo usa \verb"math.log10" para calcular
+una relación señal-ruido en decibeles (suponiendo que \verb"signal_power" y
+\verb"noise_power" están definidas).  El módulo math también proporciona {\tt log},
+el cual calcula logaritmos en base {\tt e}.
+\index{función log}
+\index{log!función}
+\index{función seno}
+\index{radián}
+\index{función trigonométrica}
+\index{trigonométrica!función}
 
-The second example finds the sine of {\tt radians}.  The variable name {\tt radians} is a hint that {\tt sin} and the other trigonometric
-functions ({\tt cos}, {\tt tan}, etc.)  take arguments in radians. To
-convert from degrees to radians, divide by 180 and multiply by
+El segundo ejemplo encuentra el seno de {\tt radians}.  El nombre de la variable {\tt radians} es un indicio de que {\tt sin} y las otras funciones
+trigonométricas ({\tt cos}, {\tt tan}, etc.)  toman argumentos en radianes. Para
+convertir de grados a radianes, divide por 180 y multiplica por
 $\pi$:
 
 \begin{verbatim}
@@ -2019,16 +2020,16 @@ $\pi$:
 0.707106781187
 \end{verbatim}
 %
-The expression {\tt math.pi} gets the variable {\tt pi} from the math
-module.  Its value is a floating-point approximation
-of $\pi$, accurate to about 15 digits.
+La expresión {\tt math.pi} obtiene la variable {\tt pi} del módulo
+math.  Su valor es una aproximación en coma flotante
+de $\pi$, con precisión de alrededor de 15 digitos.
 \index{pi}
 
-If you know
-trigonometry, you can check the previous result by comparing it to
-the square root of two divided by two:
-\index{sqrt function}
-\index{function!sqrt}
+Si sabes
+trigonometría, puedes verificar los resultados anteriores comparándolos con
+la raíz cuadrada de dos, dividido por dos:
+\index{función sqrt}
+\index{sqrt!función}
 
 \begin{verbatim}
 >>> math.sqrt(2) / 2.0
@@ -2036,33 +2037,33 @@ the square root of two divided by two:
 \end{verbatim}
 %
 
-\section{Composition}
-\index{composition}
+\section{Composición}
+\index{composición}
 
-So far, we have looked at the elements of a program---variables,
-expressions, and statements---in isolation, without talking about how to
-combine them.
+Hasta aquí, hemos visto los elementos de un programa---variables,
+expresiones y sentencias---de forma aislada, sin hablar sobre cómo
+combinarlos.
 
-One of the most useful features of programming languages is their
-ability to take small building blocks and {\bf compose} them.  For
-example, the argument of a function can be any kind of expression,
-including arithmetic operators:
+Una de las características más útiles de los lengiajes de programación es su
+posibilidad de tomar pequeños bloques de construcción y {\bf componerlos}.  Por
+ejemplo, el argumento de una función puede ser cualquier tipo de expresión,
+incluyendo operadores aritméticos:
 
 \begin{verbatim}
 x = math.sin(degrees / 360.0 * 2 * math.pi)
 \end{verbatim}
 %
-And even function calls:
+E incluso llamadas a funciones:
 
 \begin{verbatim}
 x = math.exp(math.log(x+1))
 \end{verbatim}
 %
-Almost anywhere you can put a value, you can put an arbitrary
-expression, with one exception: the left side of an assignment
-statement has to be a variable name.  Any other expression on the left
-side is a syntax error (we will see exceptions to this rule
-later).
+Casi en cualquier lugar que puedes poner un valor, puedes poner una expresión
+arbitraria, con una excepción: el lado izquierdo de una sentencia
+de asignación tiene que ser un nombre de variable. Cualquier otra expresión en el lado
+izquierdo es un error de sintaxis (veremos excepciones a esta regla
+más tarde).
 
 \begin{verbatim}
 >>> minutes = hours * 60                 # right
@@ -2071,20 +2072,20 @@ SyntaxError: can't assign to operator
 \end{verbatim}
 %
 \index{SyntaxError}
-\index{exception!SyntaxError}
+\index{excepción!SyntaxError}
 
 
-\section{Adding new functions}
+\section{Agregando nuevas funciones}
 
-So far, we have only been using the functions that come with Python,
-but it is also possible to add new functions.
-A {\bf function definition} specifies the name of a new function and
-the sequence of statements that run when the function is called.
-\index{function}
-\index{function definition}
-\index{definition!function}
+Hasta aquí, solo hemos estado usando las funciones que vienen con Python,
+pero también es posible agregar nuevas funciones.
+Una {\bf definición de función} especifica el nombre de una nueva función y
+la secuencia de sentencias que se ejecutan cuando la función es llamada.
+\index{función}
+\index{definición de función}
+\index{función!definición de}
 
-Here is an example:
+Aquí hay un ejemplo:
 
 \begin{verbatim}
 def print_lyrics():
@@ -2092,19 +2093,19 @@ def print_lyrics():
     print("I sleep all night and I work all day.")
 \end{verbatim}
 %
-{\tt def} is a keyword that indicates that this is a function
-definition.  The name of the function is \verb"print_lyrics".  The
-rules for function names are the same as for variable names: letters,
-numbers and underscore are legal, but the first character
-can't be a number.  You can't use a keyword as the name of a function,
-and you should avoid having a variable and a function with the same
-name.
-\index{def keyword}
-\index{keyword!def}
-\index{argument}
+{\tt def} es una palabra clave que indica que esta es una definición
+de función. El nombre de la función es \verb"print_lyrics".  Las
+reglas para los nombres de funciones son las mismas que para los nombres de variables: letras,
+números y guión bajo son legales, pero el primer caracter
+no puede ser un número.  No puedes usar una palabra clave como nombre de una función,
+y deberías evitar tener una variable y una función con el mismo
+nombre.
+\index{palabra clave def}
+\index{def!palabra clave}
+\index{argumento}
 
-The empty parentheses after the name indicate that this function
-doesn't take any arguments.
+Los paréntesis vacíos después del nombre indican que esta función
+no toma ningún argumento.
 \index{parentheses!empty}
 \index{header}
 \index{body}
@@ -2139,7 +2140,7 @@ isn't complete:
 ...
 \end{verbatim}
 %
-To end the function, you have to enter an empty line.
+Para terminar una función, tienes que insertar una línea vacía.
 
 Defining a function creates a {\bf function object}, which
 has type \verb"function":
@@ -2185,11 +2186,11 @@ I sleep all night and I work all day.
 But that's not really how the song goes.
 
 
-\section{Definitions and uses}
-\index{function definition}
+\section{Definiciones y usos}
+\index{definición de función}
 
-Pulling together the code fragments from the previous section, the
-whole program looks like this:
+Reuniendo los fragmentos de código de la sección anterior, el
+programa completo se ve así:
 
 \begin{verbatim}
 def print_lyrics():
@@ -2203,25 +2204,25 @@ def repeat_lyrics():
 repeat_lyrics()
 \end{verbatim}
 %
-This program contains two function definitions: \verb"print_lyrics" and
-\verb"repeat_lyrics".  Function definitions get executed just like other
-statements, but the effect is to create function objects.  The statements
-inside the function do not run until the function is called, and
-the function definition generates no output.
+Este programa contiene dos definiciones de función: \verb"print_lyrics" y
+\verb"repeat_lyrics".  Las definiciones de funciones se ejecutan al igual que otras
+sentencias, pero el efecto es crear objetos de función.  Las sentencias
+dentro de la función no se ejecutan hasta que la función es llamada, y
+la definición de función no genera salida.
 \index{use before def}
 
-As you might expect, you have to create a function before you can
-run it.  In other words, the function definition has to run
-before the function gets called.
+Como podrías esperar, tienes que crear la función antes de que puedas
+ejecutarla.  En otras palabras, la definición de función tiene que efectuarse
+antes de que la función sea llamada.
 
-As an exercise, move the last line of this program
-to the top, so the function call appears before the definitions. Run
-the program and see what error
-message you get.
+Como ejercicio, mueve la última línea de este programa
+hasta el principio, así la llamada a la función aparece antes que las definiciones. Ejecuta
+el programa y mira qué mensaje
+de error obtienes.
 
-Now move the function call back to the bottom
-and move the definition of \verb"print_lyrics" after the definition of
-\verb"repeat_lyrics".  What happens when you run this program?
+Ahora regresa la llamada de función al final
+y mueve la definición de \verb"print_lyrics" a después de la definición de
+\verb"repeat_lyrics".  ¿Qué ocurre cuando ejecutas este programa?
 
 
 \section{Flow of execution}
