Agregando opciones de paquete babel (spanish)

--- a/book/book.tex
+++ b/book/book.tex
@@ -27,6 +27,8 @@
 \usepackage{hevea}
 \usepackage{upquote}
 \usepackage{appendix}
+\usepackage[spanish,es-noquoting]{babel}
+\usepackage[utf8]{inputenc}
 \usepackage[bookmarks]{hyperref}
 
 \title{Think Python}
